- Fixed race condition in Cursor stream (NODE-31)
- Fixed issues related to node 0.10 and process.nextTick now correctly using setImmediate where needed on node 0.10
- Added support for maxMessageSizeBytes if available (DRIVERS-1)
- Added support for authSource (2.4) to MongoClient URL and db.authenticate method (DRIVER-69/NODE-34)

1.2.13 2013-02-22
-----------------
- Allow strategy 'none' for repliaset if no strategy wanted (will default to round robin selection of servers on a set readPreference)
- Fixed missing MongoErrors on some cursor methods (Issue #882)
- Correctly returning a null for the db instance on MongoClient.connect when auth fails (Issue #890)
- Added dropTarget option support for renameCollection/rename (Issue #891, help from https://github.com/jbottigliero)
- Fixed issue where connection using MongoClient.connect would fail if first server did not exist (Issue #885)

1.2.12 2013-02-13
-----------------
- Added limit/skip options to Collection.count (Issue #870)
- Added applySkipLimit option to Cursor.count (Issue #870)
- Enabled ping strategy as default for Replicaset if none specified (Issue #876)
- Should correctly pick nearest server for SECONDARY/SECONDARY_PREFERRED/NEAREST (Issue #878)

1.2.11 2013-01-29
-----------------
- Added fixes for handling type 2 binary due to PHP driver (Issue #864)
- Moved callBackStore to Base class to have single unified store (Issue #866)
- Ping strategy now reuses sockets unless they are closed by the server to avoid overhead

1.2.10 2013-01-25
-----------------
- Merged in SSL support for 2.4 supporting certificate validation and presenting certificates to the server.
- Only open a new HA socket when previous one dead (Issue #859, #857)
- Minor fixes

1.2.9 2013-01-15
----------------
- Fixed bug in SSL support for MongoClient/Db.connect when discovering servers (Issue #849)
- Connection string with no db specified should default to admin db (Issue #848)