@@ -751,7 +751,7 @@ GridStore.prototype.read = function(length, buffer, callback) {
     // Copy content to final buffer
     slice.copy(finalBuffer, finalBuffer._index);
     // Update internal position
-    self.position = finalBuffer.length;
+    self.position = self.position + finalBuffer.length;
     // Check if we don't have a file at all
     if(finalLength == 0 && finalBuffer.length == 0) return callback(new Error("File does not exist"), null);
     // Else return data
@@ -818,6 +818,10 @@ GridStore.prototype.seek = function(position, seekLocation, callback) {
   var seekLocationFinal = seekLocation == null ? exports.GridStore.IO_SEEK_SET : seekLocation;
   var finalPosition = position;
   var targetPosition = 0;
+
+  // console.dir(targetPosition)
+
+  // Calculate the position
   if(seekLocationFinal == exports.GridStore.IO_SEEK_CUR) {
     targetPosition = self.position + finalPosition;
   } else if(seekLocationFinal == exports.GridStore.IO_SEEK_END) {
@@ -826,6 +830,7 @@ GridStore.prototype.seek = function(position, seekLocation, callback) {
     targetPosition = finalPosition;
   }
 
+  // Get the chunk
   var newChunkNumber = Math.floor(targetPosition/self.chunkSize);
   if(newChunkNumber != self.currentChunk.chunkNumber) {
     var seekChunk = function() {
